# amplifier-app-vscode

./: .gitignore  AGENTS.md  README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_VALIDATION.md  P5.6.9_CONVERSATION_HISTORY.md  PHASE2_INTEGRATION_TESTS.md  PHASE3_APPROVAL_TESTS.md  PROFILE_ITERATION_PLAN.md  ROADMAP.md  SEARCH_FEATURE_VERIFICATION.md  START_HERE.md  TESTING_CONTEXT_GATHERER.md  WORKING_WITH_AGENTS.md
docs/archive/: DOCUMENTATION_FIXES.md  FINAL_SUMMARY.md  GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_READY.md  README.md
extension/: package-lock.json  package.json  tsconfig.json  webpack.config.js
extension/src/: extension.ts
extension/src/client/: AmplifierClient.ts  EventStream.ts  types.ts
extension/src/providers/: ChatViewProvider.ts  ConversationHistoryProvider.ts
extension/src/services/: ApprovalHandler.ts  ContextGatherer.ts  CredentialsManager.ts  ServerManager.ts
server/: pyproject.toml
server/amplifier_vscode_server/: __init__.py  __main__.py  app.py  models.py
server/amplifier_vscode_server/core/: __init__.py  session_runner.py  ux_systems.py
server/amplifier_vscode_server/data/collections/vscode/: README.md  pyproject.toml
server/amplifier_vscode_server/data/collections/vscode/profiles/: .gitkeep  dev.md  simple.md  test.md  vscode-approval-test.md  vscode-dev.md  vscode-test.md
server/amplifier_vscode_server/hooks/: __init__.py  approval_hook.py  streaming_bridge.py
server/amplifier_vscode_server/routes/: __init__.py  profiles.py  sessions.py
(+3 files in other folders)
