[project]
name = "amplifier-vscode-server"
version = "0.1.0"
description = "Backend server for Amplifier VS Code extension"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "sse-starlette>=3.0.3",
    # Main amplifier package includes core, profiles, collections, and all modules
    "amplifier>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
# Use the main amplifier package from git (includes all modules)
amplifier = { git = "https://github.com/microsoft/amplifier", branch = "main" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
